--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-server.port=8000
+server.port=${SERVER_PORT:8000}
+aws.region= ${AWS_REGION:us-east-2}
+spring.datasource.url= jdbc:mysql://${MYSQL_HOST:localhost}:3306/bdname?useSSL=false&allowPublicKeyRetrieval=true&connectTimeout=20000
+spring.datasource.username=${MYSQL_USERNAME:dbuser}
+spring.datasource.password= ${MYSQL_PWD:pcdbuser}
